Fixing background image on mobile

--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -62,7 +62,8 @@
     z-index: -997;
     min-height: 90vh;
     @include b(m) {
-        min-height: 80vh
+        min-height: 80vh;
+        max-width: none;
     }
     transform: rotate(-10deg);
     opacity: 0.05;
